# wgpu-life

./: Cargo.toml  README.md
src/: debug_buffer.rs  dimensions.rs  directions.rs  framework.rs  life.rs  life.wgsl  life_params.rs  main.rs  render.wgsl  renderer.rs  texture.rs
