[package]
name = "life"
version = "0.1.0"
authors = ["Blake Jones <blakej@foo.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
resolver = "2"

# ------------------------------------------------------------------------

[dependencies]
bytemuck = {version = "1.13.1", features = ["derive"]}
cfg-if = "1.0.0"
cgmath = "0.18"
futures = "0.3"
log = "0.4"
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
winit = "0.28.1"
futures-intrusive = "0.5.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.15.1"
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.50"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
wgpu = { version = "0.15.1", features = ["webgl"]}
